# ProgrammerCalculator

./: .gitignore  build.bat  build.sh  main.py  pyproject.toml  requirements.txt  程序员计算器.spec
.github/workflows/: build.yml
src/: __init__.py  main.py
src/core/: __init__.py  bit_operations.py  calculator.py  memory.py  number_base.py
src/ui/: __init__.py  app.py  binary_panel.py  display.py  keypad.py  theme.py
src/utils/: __init__.py  constants.py
tests/: __init__.py  test_bit_operations.py  test_memory.py  test_number_base.py
