[project]
name = "programmer-calculator"
version = "1.0.0"
description = "跨平台程序员计算器，支持多进制转换"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Programmer Calculator Team"}
]
keywords = ["calculator", "programmer", "hex", "binary", "flet"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]

dependencies = [
    "flet>=0.21.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
programmer-calculator = "src.main:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

# ==================== Flet打包配置 ====================
[tool.flet]
org = "com.programmercalc"
project = "calculator"

[tool.flet.android]
split_per_abi = true
target_sdk_version = 33
min_sdk_version = 21

[tool.flet.ios]

[tool.flet.windows]

[tool.flet.linux]